--- a/Project1/index.html
+++ b/Project1/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="login-form">
+        <input type="text" placeholder="What is your name?">
+        <button>Log In</button>
+        <script src="app.js"></script>
+    </div>
     
 </body>
 </html>
