--- a/Project1/index.html
+++ b/Project1/index.html
@@ -6,11 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="login-form">
-        <input type="text" placeholder="What is your name?">
-        <button>Log In</button>
-        <script src="app.js"></script>
-    </div>
+    <form id="login-form">
+        <input 
+        required 
+        maxlength="15" 
+        type="text" 
+        placeholder="What is your name?"
+        />
+        <input type="submit" value="Log In" />
+        
+    </form>
+
+    <script src="app.js"></script>
     
 </body>
 </html>
