--- a/Project1/index.html
+++ b/Project1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Momentum</title>
 </head>
 <body>
     <form id="login-form" class ="hidden">
@@ -18,8 +18,13 @@
     </form>
     <h1 id="greeting" class="hidden"></h1>
     <h2 id="clock">00:00:00</h2>
+    <div id="quote">
+        <span></span>
+        <span></span>
+    </div>
+
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
-    
+    <script src="js/quotes.js"></script>
 </body>
 </html>
