--- a/Project1/index.html
+++ b/Project1/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h2 id="clock">00:00:00</h2>
+
     <form id="login-form" class ="hidden">
         <input 
         required 
@@ -17,12 +18,21 @@
         />
         <input type="submit" value="Log In" />
     </form>
+
     <h1 id="greeting" class="hidden"></h1>
+
     <form id="todo-form">
         <input type="text" placeholder="Write a To Do and Press Enter" required/>
     </form>
+
     <ul id="todo-list"></ul>
+
     <div id="quote">
+        <span></span>
+        <span></span>
+    </div>
+
+    <div id="weather">
         <span></span>
         <span></span>
     </div>
@@ -32,5 +42,6 @@
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
+    <script src="js/weather.js"></script>
 </body>
 </html>
