--- a/Project1/index.html
+++ b/Project1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Momentum</title>
+    <title>Dashboard</title>
 </head>
 <body>
     <h2 id="clock">00:00:00</h2>
@@ -36,11 +36,10 @@
         <span></span>
         <span></span>
     </div>
-
+    <script src="js/background.js"></script>
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
-    <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
     <script src="js/weather.js"></script>
 </body>
